--- a/myproject/ui.apps/src/main/content/jcr_root/apps/myproject/components/Header/Header.html
+++ b/myproject/ui.apps/src/main/content/jcr_root/apps/myproject/components/Header/Header.html
@@ -1,11 +1,11 @@
 <sly data-sly-use.model="com.myproject.core.models.Header"> <sly
 	data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html"
-	data-sly-call="${clientlib.all @ categories='myproject.bootcamp'}" /> <header
-	class="blog-header py-3">
+	data-sly-call="${clientlib.all @ categories='myproject.bootcamp'}" />
+<header class="blog-header py-3">
 	<div class="row flex-nowrap justify-content-between align-items-center">
 		<div class="col-12 text-center">
-			<a class="blog-header-logo text-dark" href="${properties.Homelink}" name="top" >
-				<img src="${properties.image}" class="ttn-logo">
+			<a class="blog-header-logo text-dark" href="${properties.Logolink}"
+				name="top"> <img src="${properties.image}" class="ttn-logo">
 				${properties.logoText}
 			</a>
 		</div>
