--- a/myproject/ui.apps/src/main/content/jcr_root/apps/myproject/components/PublishedBlogsComponent/PublishedBlogsComponent.html
+++ b/myproject/ui.apps/src/main/content/jcr_root/apps/myproject/components/PublishedBlogsComponent/PublishedBlogsComponent.html
@@ -1,50 +1,54 @@
-<sly data-sly-use.model="com.myproject.core.models.PublishedBlogsImpl"/>
-<sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html" 
-data-sly-call="${clientlib.all @ categories='myproject.bootcamp'}"/>
+<sly data-sly-use.model="com.myproject.core.models.PublishedBlogsImpl" />
+<sly
+	data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html"
+	data-sly-call="${clientlib.all @ categories='myproject.bootcamp'}" />
 
-<sly data-sly-test="${model.BlogsNum==0}">
-<sly data-sly-list="${model.blogsList}">
-<sly data-sly-test="${itemList.index==0}">
-      <div class="row">
-          <div class="card flex-md-row mb-4 shadow-sm h-md-1200">
-            <div class="card-body d-flex flex-column align-items-start">
-              <strong class="d-inline-block mb-2 text-primary">${item.title}</strong>
-              <h3 class="mb-0">
-                <a class="text-dark" href=${item.linkText}>Featured post</a>
-              </h3>
-              <div class="mb-1 text-muted">${item.date}</div>
-              <p class="card-text mb-auto">${item.content}</p>
-              <a href=${item.linkText}>Continue reading</a>
-            </div>
-            <img class="card-img-right flex-auto d-none d-lg-block" src=${item.image}  height="200px" width="250px" alt="Card image cap">
-          </div>
-      </div>
-</sly>
+<sly data-sly-test="${model.BlogsNum==0}"> <sly
+	data-sly-list="${model.blogsList}"> <sly
+	data-sly-test="${itemList.index==0}">
+<div class="row">
+	<div class="card flex-md-row mb-4 shadow-sm h-md-1200">
+		<div class="card-body d-flex flex-column align-items-start">
+			<strong class="d-inline-block mb-2 text-primary">${item.title}</strong>
+			<h3 class="mb-0">
+				<a class="text-dark" href=${item.linkText}>Featured post</a>
+			</h3>
+			<div class="mb-1 text-muted">${item.date}</div>
+			<p class="card-text mb-auto">${item.content}</p>
+			<a href=${item.linkText}>Continue reading</a>
+		</div>
+		<img class="card-img-right flex-auto d-none d-lg-block"
+			src=${item.image} height="200px" width="250px" alt="Card image cap">
+	</div>
+</div>
+</sly> </sly></sly>
+<sly data-sly-test="${model.BlogsNum>0}"> <sly
+	data-sly-list="${model.blogsList @begin=0,end=model.BlogsNum}">
+<div class="row">
+	<div class="card flex-md-row mb-4 shadow-sm h-md-1200">
+		<div class="card-body d-flex flex-column align-items-start">
+			<strong class="d-inline-block mb-2 text-primary">${item.title}</strong>
+			<h3 class="mb-0">
+				<a class="text-dark" href=${item.linkText}>Featured post</a>
+			</h3>
+			<div class="mb-1 text-muted">${item.date}</div>
+			<p class="card-text mb-auto">${item.content}</p>
+			<a href=${item.linkText}>Continue reading</a>
+		</div>
+		<img class="card-img-right flex-auto d-none d-lg-block"
+			src=${item.image} height="200px" width="250px" alt="Card image cap">
+	</div>
+</div>
 </sly></sly>
-<sly data-sly-test="${model.BlogsNum>0}">
-<sly data-sly-list="${model.blogsList @begin=0,end=model.BlogsNum}">
-      <div class="row">
-          <div class="card flex-md-row mb-4 shadow-sm h-md-1200">
-            <div class="card-body d-flex flex-column align-items-start">
-              <strong class="d-inline-block mb-2 text-primary">${item.title}</strong>
-              <h3 class="mb-0">
-                <a class="text-dark" href=${item.linkText}>Featured post</a>
-              </h3>
-              <div class="mb-1 text-muted">${item.date}</div>
-              <p class="card-text mb-auto">${item.content}</p>
-              <a href=${item.linkText}>Continue reading</a>
-            </div>
-            <img class="card-img-right flex-auto d-none d-lg-block" src=${item.image}  height="200px" width="250px" alt="Card image cap">
-          </div>
-      </div>
-</sly></sly>
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="assets/js/vendor/popper.min.js"></script>
-    <script src="dist/js/bootstrap.min.js"></script>
-    <script src="assets/js/vendor/holder.min.js"></script>
-    <script>
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+<script src="assets/js/vendor/popper.min.js"></script>
+<script src="dist/js/bootstrap.min.js"></script>
+<script src="assets/js/vendor/holder.min.js"></script>
+<script>
       Holder.addTheme('thumb', {
         bg: '#55595c',
         fg: '#eceeef',
